--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "updateVersion": "sh build/update.sh"
   },
   "keywords": [],
   "author": "",
